[gd_scene load_steps=6 format=3 uid="uid://dhg0ir8jeinbn"]

[ext_resource type="Script" path="res://scripts/transition.gd" id="1_y3icp"]
[ext_resource type="Script" path="res://scripts/fade_screen_anim_player.gd" id="2_k13q8"]

[sub_resource type="Animation" id="Animation_oy1t1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0cwg6"]
resource_name = "fade_out"
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_giq21"]
_data = {
"RESET": SubResource("Animation_oy1t1"),
"fade_out": SubResource("Animation_0cwg6")
}

[node name="Transition" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_y3icp")

[node name="FadeScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FadeScreenAnimPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
root_node = NodePath("../FadeScreen")
libraries = {
"": SubResource("AnimationLibrary_giq21")
}
script = ExtResource("2_k13q8")

[connection signal="animation_finished" from="FadeScreenAnimPlayer" to="." method="_on_fade_screen_anim_player_animation_finished"]
